--- a/app/views/v6/employer/create/check-your-answers.html
+++ b/app/views/v6/employer/create/check-your-answers.html
@@ -284,9 +284,13 @@ Number of positions
 
           <input type="hidden" name="answers-checked" value="true">
 
-          <button class="govuk-button" data-module="govuk-button">
-            Submit advert
-          </button>
+          <div class="govuk-button-group">
+            <button class="govuk-button" data-module="govuk-button">
+              Submit advert
+            </button>
+
+            <a href="../dashboard" class="govuk-link" href="#">Cancel</a>
+          </div>
 
         </form>
 
