--- a/app/views/v6/employer/create/employers-select.html
+++ b/app/views/v6/employer/create/employers-select.html
@@ -58,10 +58,14 @@ Which organisation is this advert for? - Your apprenticeship adverts - {{service
         </fieldset>
       </div>
 
+      <div class="govuk-button-group">
+        <button class="govuk-button" data-module="govuk-button">
+          Save and continue
+        </button>
 
-
-      <button type="submit" class="govuk-button" data-module="govuk-button">Save and continue</button><br /><br />
-      <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
+        <a href="../dashboard" class="govuk-link" href="#">Cancel</a>
+      </div>
+      
     </form>
 
   </div>
