--- a/app/views/v6/employer/create/long-description.html
+++ b/app/views/v6/employer/create/long-description.html
@@ -110,9 +110,12 @@ Description of the vacancy - Your apprenticeship adverts - {{serviceName}} - GOV
             You can enter up to 500 characters
           </div>
         </div>
-        <div class="govuk-form-group">
-          <input type="submit" class="govuk-button" data-module="govuk-button" value="Save and continue" />
-          <a href="vacancy-preview" class="govuk-body das-button--link">Cancel</a>
+        <div class="govuk-button-group">
+          <button class="govuk-button" data-module="govuk-button">
+            Save and continue
+          </button>
+
+          <a href="../dashboard" class="govuk-link" href="#">Cancel</a>
         </div>
       </fieldset>
     </form>
