--- a/app/views/v6/employer/create/select-training-provider.html
+++ b/app/views/v6/employer/create/select-training-provider.html
@@ -87,10 +87,15 @@ Have you found a training provider? - Your apprenticeship adverts - {{serviceNam
           </details>
       
         </fieldset>        
-        <div class="govuk-form-group govuk-!-margin-top-9">
-          <button type="submit" class="govuk-button">Save and continue</button><br /><br />
-          <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
+        
+        <div class="govuk-button-group">
+          <button class="govuk-button" data-module="govuk-button">
+            Save and continue
+          </button>
+
+          <a href="../dashboard" class="govuk-link" href="#">Cancel</a>
         </div>
+        
       </div>
     </form>
   </div>
