--- a/app/views/v6/employer/create/things-to-consider.html
+++ b/app/views/v6/employer/create/things-to-consider.html
@@ -33,9 +33,15 @@ What else do you want the applicant to consider? (optional) - Your apprenticeshi
           You can enter up to 350 characters
         </div>
       </div>
-      <!--<button type="submit" class="govuk-button" data-module="govuk-button">Save and preview</button>-->
-      <button type="submit" class="govuk-button" data-module="govuk-button">Save and continue</button>
-      <a href="vacancy-preview?edit=no" class="govuk-body das-button--link">Cancel</a>
+      
+      <div class="govuk-button-group">
+        <button class="govuk-button" data-module="govuk-button">
+          Save and continue
+        </button>
+
+        <a href="../dashboard" class="govuk-link" href="#">Cancel</a>
+      </div>
+      
     </form>
   </div>
 </div>
