--- a/app/views/v6/employer/create/training-select.html
+++ b/app/views/v6/employer/create/training-select.html
@@ -55,14 +55,13 @@ What training will the apprentice take? - Your apprenticeship adverts - {{servic
               <p class="govuk-body"><a href="#" id="clear-search" class="govuk-link">Clear search</a></p>
             </div>
           </fieldset>
-          <div class=" govuk-form-grou govuk-!-margin-top-2">
-            {% if data.edit != "yes"%}
-              <input type="submit" class="govuk-button" data-module="govuk-button" name="continueButton" value="Save and continue"/><br /><br />
-              <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
-            {%else%}
-            <input type="submit" class="govuk-button" data-module="govuk-button" name="previewdButton" value="Save and continue"/><br /><br />
-            <a href="vacancy-preview?edit=no" class="govuk-body das-button--link">Cancel</a>
-            {%endif%}
+          
+          <div class="govuk-button-group">
+            <button class="govuk-button" data-module="govuk-button">
+              Save and continue
+            </button>
+
+            <a href="../dashboard" class="govuk-link" href="#">Cancel</a>
           </div>
         </form>
 
