--- a/app/views/v6/employer/create/contact.html
+++ b/app/views/v6/employer/create/contact.html
@@ -34,10 +34,15 @@ Add contact information - Your apprenticeship adverts - {{serviceName}} - GOV.UK
           <label class="govuk-label" for="EmployerContactPhone">Contact number (optional)</label>
           <input class="govuk-input govuk-input--width-20" type="tel" maxlength="16" id="EmployerContactPhone" name="EmployerContactPhone" value="{% if data.EmployerContactPhone %}{{data.EmployerContactPhone}}{%endif%}">
       </div>
-      <div class="govuk-form-group">
-          <input type="submit" value="Save and continue" class="govuk-button save-button" data-automation="btn-continue">
-          <a class="govuk-body das-button--link" href="vacancy-preview/" data-automation="link-cancel">Cancel</a>
-      </div>
+      
+      <div class="govuk-button-group">
+          <button class="govuk-button" data-module="govuk-button">
+            Save and continue
+          </button>
+
+          <a href="../dashboard" class="govuk-link" href="#">Cancel</a>
+        </div>
+        
     </form>
   </div>
 </div>
