--- a/app/views/v6/employer/create/dates.html
+++ b/app/views/v6/employer/create/dates.html
@@ -154,13 +154,15 @@ Important dates - Your apprenticeship adverts - {{serviceName}} - GOV.UK
           </div>
         </fieldset>
       </div>
-      {% if data.edit != "yes"%}
-        <input type="submit" class="govuk-button" data-module="govuk-button" name="continueButton" value="Save and continue"/><br /><br />
-        <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
-      {%else%}
-      <input type="submit" class="govuk-button" data-module="govuk-button" name="previewdButton" value="Save and preview"/>
-      <a href="../vacancy-preview" class="govuk-body das-button--link">Cancel</a>
-      {%endif%}
+      
+      <div class="govuk-button-group">
+        <button class="govuk-button" data-module="govuk-button">
+          Save and continue
+        </button>
+
+        <a href="../dashboard" class="govuk-link" href="#">Cancel</a>
+      </div>
+      
       </form>
   </div>
 </div>
