--- a/app/views/v6/employer/create/display-name.html
+++ b/app/views/v6/employer/create/display-name.html
@@ -87,15 +87,14 @@ What employer name do you want on your advert? - Your apprenticeship adverts - {
 
         </fieldset>
 
-        <div class="govuk-form-group">
-          {% if query.edit != "yes"%}
-            <input type="submit" class="govuk-button" data-module="govuk-button" name="continueButton" value="Save and continue"/><br><br>
-            <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
-          {%else%}
-            <input type="submit" class="govuk-button" data-module="govuk-button" name="previewButton" value="Save and continue"/><br><br>
-            <a href="vacancy-preview" class="govuk-body das-button--link">Cancel</a>
-          {%endif%}
+        <div class="govuk-button-group govuk-!-margin-top-4">
+          <button class="govuk-button" data-module="govuk-button">
+            Save and continue
+          </button>
+
+          <a href="../dashboard" class="govuk-link" href="#">Cancel</a>
         </div>
+
       </form>
     </div>
 
