--- a/app/views/v6/employer/create/qualifications.html
+++ b/app/views/v6/employer/create/qualifications.html
@@ -92,13 +92,13 @@ What qualifications would you like the applicant to have? - Your apprenticeship 
               </fieldset>
           </div>
 
+          <div class="govuk-button-group">
+            <button class="govuk-button" data-module="govuk-button">
+              Save and continue
+            </button>
 
-
-          <br>
-          <input type="submit" class="govuk-button" data-module="govuk-button" data-automation="btn-continue" name="button" value="Save and continue">
-
-          <a class="govuk-body das-button--link" href="qualifications-list" data-automation="link-cancel">Cancel</a>
-       
+            <a href="../dashboard" class="govuk-link" href="#">Cancel</a>
+          </div>
 
         </form>
           </div>
