--- a/app/views/v6/employer/create/short-description.html
+++ b/app/views/v6/employer/create/short-description.html
@@ -34,14 +34,15 @@ Short description of the apprenticeship - Your apprenticeship adverts - {{servic
           You can enter up to 350 characters
         </div>
       </div>
-      {% if data.edit != "yes"%}
-      <input type="submit" class="govuk-button" data-module="govuk-button" name="continueButton" value="Save and continue"/>
-      <!-- <a href="skills" class="govuk-button das-button-secondary govuk-!-margin-left-2" name="continueButton" value="Do this later">Skip</a> -->
-        <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
-      {%else%}
-        <input type="submit" class="govuk-button" data-module="govuk-button" name="previewButton" value="Save and preview"/>
-        <a href="vacancy-preview" class="govuk-body das-button--link">Cancel</a>
-      {%endif%}
+      
+      <div class="govuk-button-group">
+        <button class="govuk-button" data-module="govuk-button">
+          Save and continue
+        </button>
+
+        <a href="../dashboard" class="govuk-link" href="#">Cancel</a>
+      </div>
+      
     </form>
   </div>
 </div>
