--- a/app/views/v6/employer/create/title.html
+++ b/app/views/v6/employer/create/title.html
@@ -29,16 +29,16 @@ What do you want to call this advert? - Your apprenticeship adverts - {{serviceN
           <input class="govuk-input govuk-!-width-three-quarters js-character-count" id="title" name="title" type="text" value="{% if data.title and data.edit == 'yes' %}{{data.title}}{%endif%}">
         </div>
       </div>
+      
+      <div class="govuk-button-group">
+        <button class="govuk-button" data-module="govuk-button">
+          Save and continue
+        </button>
 
-      <div class="govuk-form-group">
-        {% if data.edit != "yes"%}
-        <input type="submit" class="govuk-button" data-module="govuk-button" name="continueButton" value="Save and continue"/><br /><br />
-          <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
-        {%else%}
-          <input type="submit" class="govuk-button" data-module="govuk-button" name="previewButton" value="Save and preview"/><br /><br />
-          <a href="../vacancy-preview" class="govuk-body das-button--link">Cancel</a>
-        {%endif%}
+        <a href="../dashboard" class="govuk-link" href="#">Cancel</a>
       </div>
+
+
       </fieldset>
     </form>
   </div>
