--- a/app/views/v6/employer/create/training-confirm.html
+++ b/app/views/v6/employer/create/training-confirm.html
@@ -46,15 +46,12 @@ Confirm apprenticeship training - Your apprenticeship adverts - {{serviceName}} 
     <p class="govuk-body govuk-!-margin-bottom-0"><a href="training-select?change=yes">Change apprenticeship training</a><br></p>
     </div>
     <form method="post">
-        <div class="govuk-form-group">
+        <div class="govuk-button-group">
+          <button class="govuk-button" data-module="govuk-button">
+            Save and continue
+          </button>
 
-            {% if data.edit != "yes"%}
-            <button type="submit" class="govuk-button" data-module="govuk-button" name="previewdButton" value="Save and continue">Confirm and continue</button><br /><br />
-            <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
-            {% else %}
-            <a href="../vacancy-preview?edit=no" type="submit" class="govuk-button" data-module="govuk-button" name="previewdButton" value="Save and preview">Save and preview</a><br /><br />
-            <a href="../vacancy-preview?edit=no" class="govuk-body das-button--link">Cancel</a>
-            {% endif %}
+          <a href="../dashboard" class="govuk-link" href="#">Cancel</a>
         </div>
       </form>
   </div>
