--- a/app/views/v6/employer/create/wages.html
+++ b/app/views/v6/employer/create/wages.html
@@ -121,13 +121,13 @@ How much would you like to pay the apprentice? - Your apprenticeship adverts - {
         </div>
       </div>
 
-      {% if data.edit != "yes"%}
-      <input type="submit" class="govuk-button" name="continueButton" value="Save and continue" /><br /><br />
-      <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
-      {%else%}
-      <input type="submit" class="govuk-button" name="previewButton" value="Save and preview" />
-      <a href="../vacancy-preview" class="govuk-body das-button--link">Cancel</a>
-      {%endif%}
+      <div class="govuk-button-group">
+        <button class="govuk-button" data-module="govuk-button">
+          Save and continue
+        </button>
+
+        <a href="../dashboard" class="govuk-link" href="#">Cancel</a>
+      </div>
     </form>
   </div>
 </div>
