--- a/app/views/v6/employer/create/start-page.html
+++ b/app/views/v6/employer/create/start-page.html
@@ -15,18 +15,22 @@ Create an advert - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">Create an advert</h1>
-        <p class="govuk-body-l">Recruit an apprentice by creating an advert to post on <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship (opens in a new tab)</a>.</p>
-        
-        <h2 class="govuk-heading-m">Before you start</h2>
-        <p class="govuk-body">Before you create an advert, you’ll need to know:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>the name of the apprenticeship training course</li>
-          <li>the name of the training provider - if you don’t have a training provider yet, you can <a href="#" class="govuk-link govuk-link--no-visited-state">find a provider (opens in a new tab)</a></li>
-          <li>the duration of the apprenticeship</li>
-          <li>the number of hours spent working and training</li>
-          <li>how much your apprentice will be paid</li>
-        </ul>
+      <h1 class="govuk-heading-xl">Create an advert</h1>
+      <p class="govuk-body-l">Recruit an apprentice by creating an advert to post on <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship (opens in a new tab)</a>.</p>
+      
+      <h2 class="govuk-heading-m">Before you start</h2>
+      <p class="govuk-body">Before you create an advert, you’ll need to know:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>the name of the apprenticeship training course</li>
+        <li>the name of the training provider - if you don’t have a training provider yet, you can <a href="#" class="govuk-link govuk-link--no-visited-state">find a provider (opens in a new tab)</a></li>
+        <li>the duration of the apprenticeship</li>
+        <li>the number of hours spent working and training</li>
+        <li>how much your apprentice will be paid</li>
+      </ul>
+
+      <div class="govuk-inset-text">
+        You can use our recruitment <a href="https://www.gov.uk/guidance/get-started-with-the-recruitment-apis-as-an-employer">Application Programming Interfaces (APIs) (opens in a new tab)</a> to create adverts using your existing systems or display adverts from Find an apprenticeship on your websites.
+      </div>
 
 
       {% set _forwardLink = "task-list" %}
