--- a/app/views/v6/employer/create/start-page.html
+++ b/app/views/v6/employer/create/start-page.html
@@ -7,7 +7,7 @@ Create an advert - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 {% block beforeContent %}
 {{super()}}
 {% if data.journey != "new" %}
-<a href="{%if data.edit != 'yes' %}create-vacancy{%else%}../vacancy-preview?edit=no{%endif%}" class="govuk-back-link">Back</a>
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
 {% endif %}
 {% endblock %}
 
