Updated task list and CYA for multiple locations

--- a/app/views/v6/employer/create/check-your-answers.html
+++ b/app/views/v6/employer/create/check-your-answers.html
@@ -146,28 +146,14 @@ Training provider
           
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-             
-Number of positions
+              Address & positions
             </dt>
             <dd class="govuk-summary-list__value">
-              [[selected number]]
+              [[selected address & positions]]
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> number of positions</span>
-              </a>
-            </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Location
-            </dt>
-            <dd class="govuk-summary-list__value">
-              [[selected location]]
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> selected location</span>
+                Change<span class="govuk-visually-hidden"> address & positions</span>
               </a>
             </dd>
           </div>
