--- a/app/views/v6/employer/create/task-list.html
+++ b/app/views/v6/employer/create/task-list.html
@@ -220,10 +220,10 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
             <span class="app-task-list__task-name">
               {% if data.section2 == "completed" %}
               <a href="main-address?return_url=task-list" aria-describedby="contact-details-status">
-                Address
+                Address & positions
               </a>
               {% else %}
-              Address
+              Address & positions
               {% endif %}
             </span>            
             <!--{% if data.port_entry or data.port_export or data.transport_method %}
