Added ability to edit positions in multiple location journey

--- a/app/views/v6/employer/create/add-address.html
+++ b/app/views/v6/employer/create/add-address.html
@@ -35,7 +35,7 @@ Where will the apprentices work? - Your apprenticeship adverts - {{serviceName}}
             <label class="govuk-label" for="addresspositions1">
               Number of positions for this address
             </label>
-            <input class="govuk-input govuk-input govuk-input--width-4" id="addresspositions1" name="addresspositions1" type="text">
+            <input class="govuk-input govuk-input govuk-input--width-4" id="addresspositions1" name="addresspositions1" type="text" value="{{ data['addresspositions1'] }}">
           </div>
     
         </fieldset>
