--- a/app/views/v6/employer/create/main-address.html
+++ b/app/views/v6/employer/create/main-address.html
@@ -36,7 +36,7 @@ Where will the apprentices work? - Your apprenticeship adverts - {{serviceName}}
                 <label class="govuk-label" for="addresspositions">
                   Number of positions for this address
                 </label>
-                <input class="govuk-input govuk-input--width-3" id="addresspositions" name="addresspositions" type="text">
+                <input class="govuk-input govuk-input--width-3" id="addresspositions" name="addresspositions" type="text" value="{{ data['addresspositions'] }}">
               </div>
 
             </div>
