--- a/app/views/v6/employer/create/add-address1.html
+++ b/app/views/v6/employer/create/add-address1.html
@@ -35,7 +35,7 @@ Where will the apprentices work? - Your apprenticeship adverts - {{serviceName}}
             <label class="govuk-label" for="addresspositions2">
               Number of positions for this address
             </label>
-            <input class="govuk-input govuk-input govuk-input--width-4" id="addresspositions2" name="addresspositions2" type="text">
+            <input class="govuk-input govuk-input govuk-input--width-4" id="addresspositions2" name="addresspositions2" type="text"  value="{{ data['addresspositions2'] }}">
           </div>
                     
         </fieldset>
