--- a/app/views/v6/employer/create/address-list.html
+++ b/app/views/v6/employer/create/address-list.html
@@ -27,7 +27,7 @@ Where will the apprentices work? - Your apprenticeship adverts - {{serviceName}}
 
           <td class="govuk-table__cell" role="gridcell">{% if data['addresspositions'] %} {{ data['addresspositions'] }} {% else %}2 {% endif %} positions</td>
 
-          <td class="govuk-table__cell" role="gridcell" style="text-align:right"><a href="#" class="govuk-link--no-visited-state js-remove" onClick="test()">Remove</a>&nbsp;&nbsp;&nbsp;<a class="govuk-link--no-visited-state" href="#">Edit</a></td>
+          <td class="govuk-table__cell" role="gridcell" style="text-align:right"><a href="#" class="govuk-link--no-visited-state js-remove" onClick="test()">Remove</a>&nbsp;&nbsp;&nbsp;<a class="govuk-link--no-visited-state" href="main-address">Edit</a></td>
         </tr>
         {% endif %}
 
@@ -37,7 +37,7 @@ Where will the apprentices work? - Your apprenticeship adverts - {{serviceName}}
 
           <td class="govuk-table__cell" role="gridcell">{% if data['addresspositions1'] %} {{ data['addresspositions1'] }} {% else %}3 {% endif %} positions</td>
 
-          <td class="govuk-table__cell" role="gridcell" style="text-align:right"><a href="#" class="govuk-link--no-visited-state js-remove">Remove</a>&nbsp;&nbsp;&nbsp;<a class="govuk-link--no-visited-state" href="#">Edit</a></td>
+          <td class="govuk-table__cell" role="gridcell" style="text-align:right"><a href="#" class="govuk-link--no-visited-state js-remove">Remove</a>&nbsp;&nbsp;&nbsp;<a class="govuk-link--no-visited-state" href="add-address">Edit</a></td>
         </tr>
         {% endif %}
 
@@ -47,7 +47,7 @@ Where will the apprentices work? - Your apprenticeship adverts - {{serviceName}}
 
           <td class="govuk-table__cell" role="gridcell">{% if data['addresspositions2'] %} {{ data['addresspositions2'] }} {% else %}1 {% endif %} positions</td>
 
-          <td class="govuk-table__cell" role="gridcell" style="text-align:right"><a href="#" class="govuk-link--no-visited-state js-remove">Remove</a>&nbsp;&nbsp;&nbsp;<a class="govuk-link--no-visited-state" href="#">Edit</a></td>
+          <td class="govuk-table__cell" role="gridcell" style="text-align:right"><a href="#" class="govuk-link--no-visited-state js-remove">Remove</a>&nbsp;&nbsp;&nbsp;<a class="govuk-link--no-visited-state" href="add-address1">Edit</a></td>
         </tr>
         {% endif %}
   
@@ -77,13 +77,11 @@ Where will the apprentices work? - Your apprenticeship adverts - {{serviceName}}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript">
 
-
-$(function() {
-    $(".js-remove").click(function(){
-      $(this).parents('tr').fadeOut();
-    });
-});
-
+  $(function() {
+      $(".js-remove").click(function(){
+        $(this).parents('tr').fadeOut();
+      });
+  });
 
 </script>
 
